Update: added checkout page and updated styling

--- a/src/styles/globals/_header.scss
+++ b/src/styles/globals/_header.scss
@@ -1,3 +1,24 @@
+@use "../utilities/" as *;
+
 header {
 	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	color: white;
+	background-color: rgb(37, 37, 37);
+}
+
+nav {
+	ul {
+		display: flex;
+		gap: rem(24);
+
+		.link {
+			color: white;
+		}
+
+		.link:hover {
+			color: blue;
+		}
+	}
 }
