--- a/src/styles/globals/_main.scss
+++ b/src/styles/globals/_main.scss
@@ -1,4 +1,10 @@
+@use "../utilities/" as *;
+
 body {
 	background-color: rgb(63, 63, 63);
 	font-family: Montserrat, Arial, sans-serif;
+}
+
+.content-padding {
+	padding: rem(25);
 }
