--- a/src/styles/globals/_typography.scss
+++ b/src/styles/globals/_typography.scss
@@ -9,7 +9,7 @@ h3 {
 
 h1 {
 	font-size: rem(36);
-	font-weight: 600;
+	font-weight: 400;
 }
 
 h2 {
@@ -29,15 +29,29 @@ a:active {
 }
 
 @media screen and (max-width: rem(768)) {
-	h1,
+	h1 {
+		font-size: rem(30);
+	}
+
 	h2 {
-		font-size: rem(50);
+		font-size: rem(24);
+	}
+
+	h3 {
+		font-size: rem(20);
 	}
 }
 
 @media screen and (max-width: rem(425)) {
-	h1,
+	h1 {
+		font-size: rem(24);
+	}
+
 	h2 {
-		font-size: rem(32);
+		font-size: rem(20);
+	}
+
+	h3 {
+		font-size: rem(18);
 	}
 }
