--- a/src/styles/globals/_main.scss
+++ b/src/styles/globals/_main.scss
@@ -8,3 +8,19 @@ body {
 .content-padding {
 	padding: rem(25);
 }
+
+.page-flex {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+input[type="number"] {
+	-webkit-appearance: textfield;
+	-moz-appearance: textfield;
+	appearance: textfield;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+}
