--- a/src/styles/components/_button.module.scss
+++ b/src/styles/components/_button.module.scss
@@ -3,11 +3,21 @@
 button {
 	padding: rem(15);
 
-	&.primary {
-		background-color: red;
+	&.up {
+		background-color: blue;
 	}
 
-	&.secondary {
-		background-color: green;
+	&.down {
+		background-color: rgb(0, 0, 122);
 	}
+
+	&.up,
+	&.down {
+		color: white;
+		border: none;
+	}
+}
+
+button:hover {
+	cursor: pointer;
 }
