--- a/src/styles/components/_products.module.scss
+++ b/src/styles/components/_products.module.scss
@@ -11,5 +11,42 @@
 	padding: rem(10);
 	display: flex;
 	flex-direction: column;
-	gap: rem(10);
+	gap: rem(16);
+
+	.img-ctn {
+		background-color: black;
+		height: rem(300);
+		width: rem(300);
+	}
+
+	.price-quantity {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.quantity-ctn {
+		display: flex;
+
+		input {
+			width: rem(50);
+			padding: rem(4);
+		}
+
+		button {
+			padding: rem(4) rem(12);
+		}
+	}
+}
+
+@media screen and (max-width: rem(1024)) {
+	.products-ctn {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media screen and (max-width: rem(425)) {
+	.products-ctn {
+		grid-template-columns: repeat(1, 1fr);
+	}
 }
