Update: added products via api

--- a/src/styles/components/_products.module.scss
+++ b/src/styles/components/_products.module.scss
@@ -19,6 +19,10 @@
 		width: rem(300);
 	}
 
+	.product-title {
+		max-width: rem(300);
+	}
+
 	.price-quantity {
 		display: flex;
 		justify-content: space-between;
