--- a/src/styles/components/_products.module.scss
+++ b/src/styles/components/_products.module.scss
@@ -7,7 +7,7 @@
 }
 
 .product-card {
-	border: 1px solid black;
+	background-color: rgb(90, 90, 90);
 	padding: rem(10);
 	display: flex;
 	flex-direction: column;
@@ -29,12 +29,19 @@
 
 	.product-title {
 		max-width: rem(300);
+		display: -webkit-box;
+		line-clamp: 2;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	.price-quantity {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		margin-top: auto;
 	}
 
 	.quantity-ctn {
@@ -43,10 +50,6 @@
 		input {
 			width: rem(50);
 			padding: rem(4);
-		}
-
-		button {
-			padding: rem(4) rem(12);
 		}
 	}
 }
